Feat: support bitset
