# internal/server/bitset.go
@@ -1,0 +1,51 @@
+package server
+
+import (
+	"github.com/yemingfeng/sdb/internal/service"
+	"github.com/yemingfeng/sdb/pkg/pb"
+	"golang.org/x/net/context"
+)
+
+type BitsetServer struct {
+	pb.UnimplementedSDBServer
+}
+
+func (server *BitsetServer) BSCreate(_ context.Context, request *pb.BSCreateRequest) (*pb.BSCreateResponse, error) {
+	res, err := service.BSCreate(request.Key, request.Size)
+	return &pb.BSCreateResponse{Success: res}, err
+}
+
+func (server *BitsetServer) BSDel(_ context.Context, request *pb.BSDelRequest) (*pb.BSDelResponse, error) {
+	res, err := service.BSDel(request.Key)
+	return &pb.BSDelResponse{Success: res}, err
+}
+
+func (server *BitsetServer) BSSetRange(_ context.Context, request *pb.BSSetRangeRequest) (*pb.BSSetRangeResponse, error) {
+	res, err := service.BSSetRange(request.Key, request.Start, request.End, request.Value)
+	return &pb.BSSetRangeResponse{Success: res}, err
+}
+
+func (server *BitsetServer) BSMSet(_ context.Context, request *pb.BSMSetRequest) (*pb.BSMSetResponse, error) {
+	res, err := service.BSMSet(request.Key, request.Bits, request.Value)
+	return &pb.BSMSetResponse{Success: res}, err
+}
+
+func (server *BitsetServer) BSGetRange(_ context.Context, request *pb.BSGetRangeRequest) (*pb.BSGetRangeResponse, error) {
+	res, err := service.BSGetRange(request.Key, request.Start, request.End)
+	return &pb.BSGetRangeResponse{Values: res}, err
+}
+
+func (server *BitsetServer) BSMGet(_ context.Context, request *pb.BSMGetRequest) (*pb.BSMGetResponse, error) {
+	res, err := service.BSMGet(request.Key, request.Bits)
+	return &pb.BSMGetResponse{Values: res}, err
+}
+
+func (server *BitsetServer) BSCount(_ context.Context, request *pb.BSCountRequest) (*pb.BSCountResponse, error) {
+	res, err := service.BSCount(request.Key)
+	return &pb.BSCountResponse{Count: res}, err
+}
+
+func (server *BitsetServer) BSCountRange(_ context.Context, request *pb.BSCountRangeRequest) (*pb.BSCountRangeResponse, error) {
+	res, err := service.BSCountRange(request.Key, request.Start, request.End)
+	return &pb.BSCountRangeResponse{Count: res}, err
+}
